--- a/src/app/update-details/update-details.component.html
+++ b/src/app/update-details/update-details.component.html
@@ -24,4 +24,5 @@
       </button>
 </form>
 </div>
+<!-- <div class="ring">Loading <span class="one"></span><span class="two"> </span></div> -->
 </div>
